--- a/Step1.html
+++ b/Step1.html
@@ -153,8 +153,8 @@
     <div class="container mt-4 text-center">
         <nav>
             <ul class="pagination justify-content-center">
-                <li class="page-item disabled"><a class="page-link" href="หน้าแรก.html">ก่อนหน้า</a></li>
-                <li class="page-item"><a class="page-link" href="หน้าแรก.html">1</a></li>
+                <li class="page-item disabled"><a class="page-link" href="index.html">ก่อนหน้า</a></li>
+                <li class="page-item"><a class="page-link" href="index.html">1</a></li>
                 <li class="page-item active"><a class="page-link" href="Step1.html">2</a></li>
                 <li class="page-item"><a class="page-link" href="">ถัดไป</a></li>
             </ul>
